# arugula

./: .gitignore  CMakeLists.txt
include/: lattice_core.hpp
include/merges/: boolean_mrg.hpp  causal_mrg.hpp  setop_mrg.hpp
include/morphisms/: greater_than.hpp  transformer.hpp
include/utils/: is_map.hpp
test/: CMakeLists.txt
test/smoke/: sets.cpp
test/smoke_morph/: test_transformers.cpp
test/transformers/: test_transformers.cpp
